--- a/Tp-Final-labo4/src/app/Shared/navbar/navbar.html
+++ b/Tp-Final-labo4/src/app/Shared/navbar/navbar.html
@@ -1,24 +1,25 @@
-
 <nav>
-  <a class="button" routerLink="" routerLinkActive="activebutton" [routerLinkActiveOptions]="{ exact: true }">
+  <a
+    class="button"
+    routerLink=""
+    routerLinkActive="activebutton"
+    [routerLinkActiveOptions]="{ exact: true }"
+  >
     Home
   </a>
 
-  
   <div class="nav-buttons">
-      @if (!activeUser) {
-    <a class="button" routerLink="/login" routerLinkActive="activebutton">Login</a>
-    <a class="button" routerLink="/signup" routerLinkActive="activebutton">Register</a>
-  } @else {
-<!--editar-->
-     <a class="button" routerLink="/profile/edit" routerLinkActive="activebutton">
-        Edit Profile
+    @if (!activeUser) {
+      <a class="button" routerLink="/login" routerLinkActive="activebutton">
+        Login
       </a>
-    
-   
-    <a class="button" (click)="onLogout()">Logout</a>
-  }
-
+      <a class="button" routerLink="/signup" routerLinkActive="activebutton">
+        Register
+      </a>
+    } @else {
+      <a class="button" (click)="onLogout()">
+        Logout
+      </a>
+    }
   </div>
-
 </nav>
