--- a/Tp-Final-labo4/src/app/Components/top-bar/top-bar.html
+++ b/Tp-Final-labo4/src/app/Components/top-bar/top-bar.html
@@ -32,7 +32,7 @@
 
     <!-- IR A LA LISTA DE PERFILES -->
     <a [routerLink]="['/profiles']" class="profile-link">
-      <span class="profile-text">Perfiles</span>
+      <span class="profile-text">Busca amigos!</span>
     </a>
 
     <!-- PERFIL PROPIO -->
