--- a/Tp-Final-labo4/src/app/Components/profile-detail/profile-detail.html
+++ b/Tp-Final-labo4/src/app/Components/profile-detail/profile-detail.html
@@ -8,7 +8,7 @@
   <div class="left-column">
 
     <!-- Películas vistas y por ver -->
-    <app-user-activity></app-user-activity>
+    <app-user-activity [userId]="userProfile?.id"></app-user-activity>
 
     <!-- RESEÑAS -->
     <h3 class="section-title">Reseñas</h3>
