se agrego el componente seguidores en las paginas

--- a/Tp-Final-labo4/src/app/Components/profile-detail/profile-detail.html
+++ b/Tp-Final-labo4/src/app/Components/profile-detail/profile-detail.html
@@ -117,6 +117,7 @@
             {{ userProfile?.isPublic ? 'Hacer perfil privado' : 'Hacer perfil público' }}
           </button>
         </div>
+        <app-follow-component [userId]=""></app-follow-component>
 
       } @else {
 
