--- a/Tp-Final-labo4/src/app/Components/profile-public/profile-public.css
+++ b/Tp-Final-labo4/src/app/Components/profile-public/profile-public.css
@@ -46,7 +46,6 @@
   padding: 25px;
   border-radius: 16px;
   backdrop-filter: blur(6px);
-  max-width: 600px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.25);
 }
 
@@ -66,16 +65,22 @@
 .follow-row {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
-  gap: 20px;
-  margin-bottom: 20px;
+  align-items: center;
+  padding: 0 40px;
+  max-width: 800px;
+  margin: 20px auto;
 }
 
+/* Botón Seguir a la izquierda */
 .left-part {
-  flex: 0 0 auto; /* Botón fijo */
+  flex: 0 0 auto;
+  display: flex;
+  align-items: center;
 }
 
+/* Caja de seguidores a la derecha */
 .right-part {
-  flex: 1;
-  text-align: right; /* Lo empuja a la derecha */
+  flex: 0 0 auto;
+  display: flex;
+  justify-content: flex-end;
 }
