--- a/Tp-Final-labo4/src/app/Components/profile-public/profile-public.html
+++ b/Tp-Final-labo4/src/app/Components/profile-public/profile-public.html
@@ -34,7 +34,7 @@
 
   <!-- ⭐ SEGUIDORES a la derecha, igual que antes -->
   <div class="followers-right">
-      <app-follow-component [userId]="profile.id"></app-follow-component>
+      <app-follow-component [userId]="profile.id!"  [showProfileButton]="false"></app-follow-component>
   </div>
 
   <div class="public-info">
