--- a/Tp-Final-labo4/src/app/Components/admin-movies/admin-movies.css
+++ b/Tp-Final-labo4/src/app/Components/admin-movies/admin-movies.css
@@ -265,3 +265,16 @@ p {
     justify-content: center;
   }
 }
+ .admin-hidden-movies {
+  margin-top: 30px;
+  padding-top: 20px;
+  border-top: 1px solid rgba(255,255,255,0.15);
+}
+
+.hidden-movie-card {
+  background: rgba(15,23,42,0.9);
+  padding: 14px;
+  border-radius: 10px;
+  margin: 10px 0;
+  border: 1px solid rgba(255,255,255,0.15);
+}
